# ember-engine

./: .clang-format  .clang-format-unused  .clangd  .gitignore  CMakeLists.txt  EmberEngine  EmberEngine.out  LSAN.supp  cmake-variants.yaml  readme.md
lib/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  defines.h  definitions.h  main-editor.cpp  main-engine.cpp  main.cpp  pch-editor.cpp  pch-engine.cpp  pch-engine.h  pch.cpp  pch.h
src/engine/: CMakeLists.txt  debug.h  engine.cpp  engine.h  engineclock.cpp  engineclock.h  graphics.cpp  graphics.h  resourcemanager.cpp  resourcemanager.h  timer.cpp  timer.h  window.cpp  window.h
src/tools/: CMakeLists.txt
src/util/: CMakeLists.txt  UNUSED_matrix.cpp  arrays.h  bitset.h  containers.h  defines.h  error.h  hash.cpp  hash.h  macros.h  macros_debug.h  macros_util.h  macros_vec_mtx.h  math.cpp  math.h  matrix.cpp  matrix.h  matrix_macros.h  matrix_utils.cpp  matrix_utils.h  matrix_wrapper_glm.cpp  matrix_wrapper_glm.h  rng.h  str.cpp  str.h  types.h  vec.cpp  vec.h  vec2_coord_container.cpp  vec2_coord_container.h  vec_base.cpp  vec_base.h  vec_funcs.cpp  vec_funcs.h  vec_macros.h  vec_utils.cpp  vec_utils.h  vec_wrapper_glm.cpp  vec_wrapper_glm.h  vectors.cpp  (+1 more)
src/util/containers/: CMakeLists.txt  vec.h
src/util/unused/: DebuggingTools.cpp  log.cpp  math.h  rng.cpp
src/util/vec/: vec.h  vec_utils.h  vec_wrapper_glm.cpp  vec_wrapper_glm.h
